RESOLVED FIXED205173
Regression(r253394) swipe/basic-cached-back-swipe.html is timing out on iOS
https://bugs.webkit.org/show_bug.cgi?id=205173
Summary Regression(r253394) swipe/basic-cached-back-swipe.html is timing out on iOS
Chris Dumez
Reported 2019-12-12 12:08:50 PST
swipe/basic-cached-back-swipe.html is timing out on iOS since r253394.
Attachments
Patch (6.44 KB, patch)
2019-12-12 12:56 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-12-12 12:56:03 PST
WebKit Commit Bot
Comment 2 2019-12-12 15:53:47 PST
Comment on attachment 385535 [details] Patch Clearing flags on attachment: 385535 Committed r253450: <https://trac.webkit.org/changeset/253450>
WebKit Commit Bot
Comment 3 2019-12-12 15:53:48 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-12 15:54:22 PST
Chris Dumez
Comment 5 2019-12-13 08:25:06 PST
Note You need to log in before you can comment on or make changes to this bug.